tests/baselines/reference/asOperatorAmbiguity.errors.txt
tests/cases/conformance/expressions/asOperator/asOperatorAmbiguity.ts(7,14): error TS2551: Property 'm' does not exist on type 'A<B>'. Did you mean 'x'?


==== tests/cases/conformance/expressions/asOperator/asOperatorAmbiguity.ts (1 errors) ====
    interface A<T> { x: T; }
    interface B { m: string; }
    
    // Make sure this is a type assertion to an array type, and not nested comparison operators.
    var x: any;
    var y = x as A<B>[];
    var z = y[0].m; // z should be string
                 ~
!!! error TS2551: Property 'm' does not exist on type 'A<B>'. Did you mean 'x'?
    
    